Traditional ML updated

--- a/Assignment/traditional_models.ipynb
+++ b/Assignment/traditional_models.ipynb
@@ -213,6 +213,54 @@
   {
    "cell_type": "code",
    "execution_count": null,
+   "id": "72e5bafe",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Model 3: Support Vector Machine\n",
+    "print(\"\\n\" + \"=\"*50)\n",
+    "print(\"TRAINING SUPPORT VECTOR MACHINE\")\n",
+    "print(\"=\"*50)\n",
+    "\n",
+    "# Train SVM (using smaller C for faster training)\n",
+    "svm_model = SVC(\n",
+    "    C=1.0,                    # Regularization parameter\n",
+    "    kernel='rbf',             # RBF kernel\n",
+    "    gamma='scale',            # Kernel coefficient\n",
+    "    random_state=42,\n",
+    "    class_weight='balanced',  # Handle class imbalance\n",
+    "    probability=True          # Enable probability predictions\n",
+    ")\n",
+    "\n",
+    "print(\"Training SVM (this may take a few minutes)...\")\n",
+    "svm_model.fit(X_train_tfidf, y_train)\n",
+    "\n",
+    "# Make predictions\n",
+    "y_pred_svm = svm_model.predict(X_test_tfidf)\n",
+    "\n",
+    "# Evaluate\n",
+    "svm_results = evaluate_model(y_test, y_pred_svm, \"Support Vector Machine\")\n",
+    "\n",
+    "# Cross-validation score (using smaller subset for speed)\n",
+    "print(\"Running cross-validation (using subset for speed)...\")\n",
+    "subset_size = 3000\n",
+    "subset_indices = np.random.choice(X_train_tfidf.shape[0], subset_size, replace=False)\n",
+    "X_subset = X_train_tfidf[subset_indices]\n",
+    "y_subset = y_train[subset_indices]\n",
+    "cv_scores_svm = cross_val_score(svm_model, X_subset, y_subset, cv=3, scoring='f1_weighted')\n",
+    "print(f\"Cross-validation F1 score (subset): {cv_scores_svm.mean():.4f} (+/- {cv_scores_svm.std() * 2:.4f})\")\n",
+    "\n",
+    "# Plot confusion matrix\n",
+    "plot_confusion_matrix(y_test, y_pred_svm, title=\"Support Vector Machine - Confusion Matrix\")\n",
+    "\n",
+    "# Save model\n",
+    "joblib.dump(svm_model, 'models/traditional_ml/svm.pkl')\n",
+    "print(\"Saved: models/traditional_ml/svm.pkl\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
    "id": "57cefa09",
    "metadata": {},
    "outputs": [
@@ -446,46 +494,6 @@
     }
    ],
    "source": [
-    "# Model 3: Support Vector Machine\n",
-    "print(\"\\n\" + \"=\"*50)\n",
-    "print(\"TRAINING SUPPORT VECTOR MACHINE\")\n",
-    "print(\"=\"*50)\n",
-    "\n",
-    "# Train SVM (using smaller C for faster training)\n",
-    "svm_model = SVC(\n",
-    "    C=1.0,                    # Regularization parameter\n",
-    "    kernel='rbf',             # RBF kernel\n",
-    "    gamma='scale',            # Kernel coefficient\n",
-    "    random_state=42,\n",
-    "    class_weight='balanced',  # Handle class imbalance\n",
-    "    probability=True          # Enable probability predictions\n",
-    ")\n",
-    "\n",
-    "print(\"Training SVM (this may take a few minutes)...\")\n",
-    "svm_model.fit(X_train_tfidf, y_train)\n",
-    "\n",
-    "# Make predictions\n",
-    "y_pred_svm = svm_model.predict(X_test_tfidf)\n",
-    "\n",
-    "# Evaluate\n",
-    "svm_results = evaluate_model(y_test, y_pred_svm, \"Support Vector Machine\")\n",
-    "\n",
-    "# Cross-validation score (using smaller subset for speed)\n",
-    "print(\"Running cross-validation (using subset for speed)...\")\n",
-    "subset_size = 3000\n",
-    "subset_indices = np.random.choice(X_train_tfidf.shape[0], subset_size, replace=False)\n",
-    "X_subset = X_train_tfidf[subset_indices]\n",
-    "y_subset = y_train[subset_indices]\n",
-    "cv_scores_svm = cross_val_score(svm_model, X_subset, y_subset, cv=3, scoring='f1_weighted')\n",
-    "print(f\"Cross-validation F1 score (subset): {cv_scores_svm.mean():.4f} (+/- {cv_scores_svm.std() * 2:.4f})\")\n",
-    "\n",
-    "# Plot confusion matrix\n",
-    "plot_confusion_matrix(y_test, y_pred_svm, title=\"Support Vector Machine - Confusion Matrix\")\n",
-    "\n",
-    "# Save model\n",
-    "joblib.dump(svm_model, 'models/traditional_ml/svm.pkl')\n",
-    "print(\"Saved: models/traditional_ml/svm.pkl\")\n",
-    "\n",
     "# Model Comparison\n",
     "print(\"\\n\" + \"=\"*60)\n",
     "print(\"MODEL COMPARISON SUMMARY\")\n",
